fix duplications and reliability